--- a/Techtree/Areas/Admin/Views/CategoryItem/Create.cshtml
+++ b/Techtree/Areas/Admin/Views/CategoryItem/Create.cshtml
@@ -8,37 +8,39 @@
 
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <input type="hidden" asp-for="CategoryId" />
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Title" class="font-weight-bold"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="font-weight-bold"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="MediaTypeId" class="font-weight-bold"></label>
-                <select asp-for="MediaTypeId" class="form-control" asp-items="@Model.MediaTypes">
-                    <option value=""> ---- Please Select A Mediatype ----</option>
-                </select>
-                <span asp-validation-for="MediaTypeId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DateTimeItemReleased" class="font-weight-bold"></label>
-                <input id="DateTimeItemReleased" name="DateTimeItemReleased"
-                       class="form-control datepicker" value="@Model.DateTimeItemReleased.ToString("dd-MM-yyyy")" />
-                <span asp-validation-for="DateTimeItemReleased" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+    <div class="col-md-6 mx-auto">
+        <div class="card p-4 border-success rounded shadow-lg">
+            <form asp-action="Create">
+                <input type="hidden" asp-for="CategoryId" />
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Title" class="font-weight-bold"></label>
+                    <input asp-for="Title" class="form-control" />
+                    <span asp-validation-for="Title" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Description" class="font-weight-bold"></label>
+                    <input asp-for="Description" class="form-control" />
+                    <span asp-validation-for="Description" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="MediaTypeId" class="font-weight-bold"></label>
+                    <select asp-for="MediaTypeId" class="form-control" asp-items="@Model.MediaTypes">
+                        <option value=""> ---- Please Select A Mediatype ----</option>
+                    </select>
+                    <span asp-validation-for="MediaTypeId" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="DateTimeItemReleased" class="font-weight-bold"></label>
+                    <input id="DateTimeItemReleased" name="DateTimeItemReleased"
+                           class="form-control datepicker" value="@Model.DateTimeItemReleased.ToString("dd-MM-yyyy")" />
+                    <span asp-validation-for="DateTimeItemReleased" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 
