--- a/Techtree/Areas/Admin/Views/Content/Create.cshtml
+++ b/Techtree/Areas/Admin/Views/Content/Create.cshtml
@@ -9,30 +9,32 @@
 <h4>Content</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <input type="hidden" asp-for="CategoryId" />
-            <input type="hidden" asp-for="CatItemId" />
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Title" class="font-weight-bold"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="HtmlContent" class="font-weight-bold"></label>
-                <input asp-for="HtmlContent" class="form-control" />
-                <span asp-validation-for="HtmlContent" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="VideoLink" class="font-weight-bold"></label>
-                <input asp-for="VideoLink" class="form-control" />
-                <span asp-validation-for="VideoLink" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+    <div class="col-md-6 mx-auto">
+        <div class="card p-4 border-success rounded shadow-lg">
+            <form asp-action="Create">
+                <input type="hidden" asp-for="CategoryId" />
+                <input type="hidden" asp-for="CatItemId" />
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Title" class="font-weight-bold"></label>
+                    <input asp-for="Title" class="form-control" />
+                    <span asp-validation-for="Title" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="HtmlContent" class="font-weight-bold"></label>
+                    <input asp-for="HtmlContent" class="form-control" />
+                    <span asp-validation-for="HtmlContent" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="VideoLink" class="font-weight-bold"></label>
+                    <input asp-for="VideoLink" class="form-control" />
+                    <span asp-validation-for="VideoLink" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 
